<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="general_delete">Delete</string>

    <string name="app_name">Ngobrol</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login</string>
    <string name="general_signin">Login</string>
    <string name="login_button_success">Success</string>
    <string name="login_button_signing">Logging in..</string>
    <string name="general_register">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="general_username">Username</string>
    <string name="general_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="register_on_progress">Registering...</string>
    <string name="register_error_confirm_password">Both password should be the same</string>
    <string name="register_error_password_required">Password is required</string>
    <string name="register_error_username_required">Username is required</string>
    <string name="register_success">You are successfully registered. Please login now</string>
    <string name="general_logout">Logout</string>
    <string name="logout_progress">Logging out...</string>
    <string name="general_noaccount">No account</string>
    <string name="title_activity_post">Ngobrol</string>
    <string name="title_activity_settings">Settings</string>
    <string name="general_page">Page </string>
    <string name="post_last">Last Post</string>
    <string name="post_first">First post</string>
    <string name="post_add_new">Add New Post</string>
    <string name="message_no_user">Please login first.</string>
    <string name="post_success">New post added.</string>
    <string name="dialog_post_hint">Put your message here</string>
    <string name="dialog_whopost">Posted as</string>
    <string name="general_ok">OK</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_categories">Categories</string>
    <string name="general_hot_threads">Hot Threads</string>
    <string name="title_activity_profile">Profile</string>
    <string name="profile_title">\'s profile</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_home">Home</string>
    <string name="general_settings">Settings</string>
    <string name="title_activity_about">About Us</string>
    <string name="pref_general">General</string>
    <string name="pref_num_posts_per_page">Number Of Posts Per Page</string>
    <string name="pref_cat_about">About</string>
    <string name="pref_about">About</string>
    <string name="profile_info">Info</string>
    <string name="profile_about_title">About Me</string>
    <string name="general_about">About</string>
    <string name="about_description">This project was an assignment from the university to make the forums for android app.</string>
    <string name="general_team">Team</string>
    <string name="main_menu_search">Search</string>
    <string name="main_menu_new">New Thread</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_save">Save</string>
    <string name="new_thread_title_empty">Title can not be empty</string>
    <string name="new_thread_done_title">Submitting</string>
    <string name="new_thread_done_message">Creating a new thread..</string>
    <string name="new_thread_poster">Creating new thread as </string>
    <string name="thread_most_popular">Most Popular</string>
    <string name="thread_most_recent">Most Recent</string>
    <string name="profile_menu_edit">Edit Profile</string>
    <string name="profile_edit_general_info">General Info</string>
    <string name="profile_edit_title_real_name">Real Name</string>
    <string name="profile_edit_invalid_realname">Real name is not valid</string>
    <string name="profile_edit_email_title">Email</string>
    <string name="profile_edit_invalid_email">Email is not valid</string>
    <string name="profile_edit_aboutme_title">About Me</string>
    <string name="profile_edit_dialog_title">Saving Data</string>
    <string name="general_please_wait">Please wait...</string>
    <string name="profile_tab_threads">Threads</string>
    <string name="profile_edit_dialog_upload_title">Uploading</string>
    <string name="profile_edit_dialog_upload_message">Please wait...</string>
    <string name="post_edit_dialog_title">Edit a Post</string>
    <string name="post_edit_dialog_success">Post successfully edited</string>
    <string name="general_edit">Edit</string>
    <string name="post_item_last_edited">Last Edited on</string>
    <string name="post_item_dialog_delete_title">Deleting...</string>
    <string name="error_message_no_connection">Can\'t connect to internet.</string>
    <string name="profile_remove_user_dialog_title">Removing</string>
    <string name="profile_remove_user_success">User has been succesfully removed</string>
    <string name="profile_remove_user_warning_title">Warning</string>
    <string name="profile_remove_user_warning_message">Are you sure to remove all about this user including post, thread, device permanently? This process can\'t be undone</string>

</resources>
