<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_general_title"
        style="?android:attr/listSeparatorTextViewStyle"
        android:text="@string/profile_edit_general_info"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black55"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_real_name_title"
        android:layout_below="@id/tv_general_title"
        android:textSize="12sp"
        android:textColor="@color/black55"
        android:paddingLeft="10dp"
        android:text="@string/profile_edit_title_real_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/et_real_name"
        android:layout_below="@+id/tv_real_name_title"
        android:textSize="16sp"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black87"
        app:testType="alpha"
        app:emptyAllowed="true"
        app:testErrorString="@string/profile_edit_invalid_realname"
        />

    <TextView
        android:id="@+id/tv_real_email_title"
        android:layout_below="@id/et_real_name"
        android:textSize="12sp"
        android:textColor="@color/black55"
        android:paddingLeft="10dp"
        android:text="@string/profile_edit_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/et_email"
        android:layout_below="@+id/tv_real_email_title"
        android:textSize="16sp"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black87"
        app:testType="email"
        app:emptyAllowed="true"
        app:testErrorString="@string/profile_edit_invalid_email"
        />

    <TextView
        android:id="@+id/tv_about_me_title"
        android:layout_below="@id/et_email"
        android:textSize="12sp"
        android:textColor="@color/black55"
        android:paddingLeft="10dp"
        android:text="@string/profile_edit_aboutme_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_about_me"
        android:layout_below="@+id/tv_about_me_title"
        android:layout_width="match_parent"
        android:textSize="14sp"
        android:paddingLeft="10dp"
        android:gravity="top|left"
        android:textColor="@color/black87"
        android:layout_height="wrap_content"
        android:maxLines="10" />


</RelativeLayout>